projects/dep-svc-ingress-practice/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dep-svc-ingress-namespace
  labels:
    app: nginx
    env: UAT
spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx
      env: UAT

  template:
    metadata:
      labels:
        app: nginx
        env: UAT

    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
