projects/dep-svc-ingress-practice/nginx/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: dep-svc-ingress-namespace
  labels:
    app: nginx
    env: UAT

spec:
  type: ClusterIP

  selector:
    app: nginx
    env: UAT

  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
